fixed jump position and no results found

--- a/app/assets/stylesheets/components/_new_navbar.scss
+++ b/app/assets/stylesheets/components/_new_navbar.scss
@@ -36,8 +36,9 @@
 }
 #search-results{
   height: fit-content;
-  width: 100%;
+  width: 92%;
   margin: auto;
+  position: absolute;
   background-color: $white;
   z-index: 3;
   display: flex;
